--- a/ThueXeMay/Areas/Admin/Views/Shared/Layout_Admin.cshtml
+++ b/ThueXeMay/Areas/Admin/Views/Shared/Layout_Admin.cshtml
@@ -69,6 +69,7 @@
                     <div class="bg-white py-2 collapse-inner rounded">
                         <a class="collapse-item" href="@Url.Action("Index","types")">Hãng xe</a>
                         <a class="collapse-item" href="@Url.Action("Index","bikes")">Xe</a>
+                        <a class="collapse-item" href="@Url.Action("Index","menus")">Menu</a>
                     </div>
                 </div>
             </li>
@@ -104,6 +105,7 @@
                     <span>Đơn hàng</span>
                 </a>
             </li>
+
             <!-- Nav Item - Pages Collapse Menu -->
             <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages"
@@ -133,7 +135,6 @@
                     <span>Liên lạc</span>
                 </a>
             </li>
-
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
 
@@ -161,17 +162,6 @@
                     </button>
 
                     <!-- Topbar Search -->
-                    <form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
-                        <div class="input-group">
-                            <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..."
-                                   aria-label="Search" aria-describedby="basic-addon2">
-                            <div class="input-group-append">
-                                <button class="btn btn-primary" type="button">
-                                    <i class="fas fa-search fa-sm"></i>
-                                </button>
-                            </div>
-                        </div>
-                    </form>
 
                     <!-- Topbar Navbar -->
                     <ul class="navbar-nav ml-auto">
