--- a/ThueXeMay/Views/Cart/Index.cshtml
+++ b/ThueXeMay/Views/Cart/Index.cshtml
@@ -26,7 +26,7 @@
     @if (Model == null || Model.Count == 0)
     {
         <h2 class="text-light text-center">
-            Giỏ hàng của bạn rỗng!
+            Giỏ hàng của bạn đang rỗng!
         </h2>
     }
     else
