--- a/ThueXeMay/Areas/Admin/Views/bikes/Create.cshtml
+++ b/ThueXeMay/Areas/Admin/Views/bikes/Create.cshtml
@@ -142,5 +142,6 @@
 </div>
 
 @section scripts {
-    <script>CKEDITOR.replace('describe');</script>
+    <script>CKEDITOR.replace('describe');
+    </script>
     }
