--- a/ThueXeMay/Views/Contact/Contact.cshtml
+++ b/ThueXeMay/Views/Contact/Contact.cshtml
@@ -25,6 +25,14 @@
                         <p><span>Email:</span> <a href="mailto:@item.email">@item.email</a></p>
                     </div>
                 </div>
+                <div class="col-md-12">
+                    <div class="border w-100 p-4 rounded mb-2 d-flex">
+                        <div class="icon mr-3">
+                            <span class="icon-facebook"></span>
+                        </div>
+                        <p><span>FaceBook:</span> <a href="@item.facebook_link">Thuê Xe Máy - Vinh</a></p>
+                    </div>
+                </div>
             </div>
 }
 
