--- a/ThueXeMay/Areas/Admin/Views/bikes/Create.cshtml
+++ b/ThueXeMay/Areas/Admin/Views/bikes/Create.cshtml
@@ -119,7 +119,7 @@
     <div class="form-group">
         <label class="control-label col-md-2">Ảnh</label>
         <div class="col-md-10">
-            <input type="file" name="Image" id="Image" required>
+            <input type="file" class="form-control-file" name="Image" id="Image" required>
             <br />
         </div>
     </div>
