--- a/ThueXeMay/Views/About/Index.cshtml
+++ b/ThueXeMay/Views/About/Index.cshtml
@@ -21,9 +21,9 @@
             <div class="col-md-6 p-md-5 img img-2 d-flex justify-content-center align-items-center" style="background-image: url(../../content/images/bg_2.jpg); ">
             </div>
             <div class="col-md-6 wrap-about ftco-animate">
-                <div class="heading-section heading-section-white pl-md-5">
+                <div class="heading-section heading-section-white pl-md-5" style="text-align: justify">
                     <span class="subheading">Về chúng tôi</span>
-                    <h2 class="mb-4">Chào mừng bạn đến với dịch vụ Thuê Xe Máy - Vinh</h2>
+                    <h2 class="mb-4" style="text-align: center">Chào mừng bạn đến với dịch vụ Thuê xe xáy - Vinh</h2>
 
                     <p>Với nhiều danh lam thắng cảnh, di tích lịch sử, các điểm vui chơi, giải trí, thành phố Vinh, tỉnh Nghệ An là điểm đến không thể bỏ qua trong kỳ nghỉ lễ.</p>
                     <p>Hiện nay, do nhu cầu du lịch phiêu lưu, khám phá tăng cao, các địa điểm du lịch đường đèo, đường núi, địa hình khó di chuyển lại là điểm đến được nhiều bạn trẻ có đam mê chinh phục lựa chọn. Bởi tính chất đặc thù của hình thức du lịch này mà xe máy trở thành phương tiện phù hợp, được ưu tiên sử dụng. Từ đó dịch vụ cho thuê xe máy tại Vinh ra đời và ngày một phổ biến.</p>
