--- a/ThueXeMay/Areas/Admin/Views/Shared/Layout_Admin.cshtml
+++ b/ThueXeMay/Areas/Admin/Views/Shared/Layout_Admin.cshtml
@@ -135,6 +135,16 @@
                     <span>Liên lạc</span>
                 </a>
             </li>
+            @if (admin.fulControl == true)
+            {
+                <li class="nav-item">
+                    <a class="nav-link" href="@Url.Action("Index","Employees")">
+                        <i class="fas fa-fw fa-table"></i>
+                        <span>Nhân viên</span>
+                    </a>
+                </li>
+            }
+
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
 
@@ -162,7 +172,6 @@
                     </button>
 
                     <!-- Topbar Search -->
-
                     <!-- Topbar Navbar -->
                     <ul class="navbar-nav ml-auto">
 
@@ -259,6 +268,15 @@
                             <!-- Dropdown - User Information -->
                             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
                                  aria-labelledby="userDropdown">
+                                <a class="dropdown-item" href="#">
+                                    <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
+                                    Đổi tên
+                                </a>
+                                <a class="dropdown-item" href="#">
+                                    <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
+                                    Đổi mật khẩu
+                                </a>
+                                <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="~/Admin/Logout" data-toggle="modal" data-target="#logoutModal">
                                     <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
                                     Đăng xuất
@@ -343,7 +361,7 @@
     <script src="~/Content/Admin/js/demo/chart-area-demo.js"></script>
     <script src="~/Content/Admin/js/demo/chart-pie-demo.js"></script>
     <script>CKEDITOR.replace('describe');</script>
-    
+
     @RenderSection("scripts", required: false)
 </body>
 
