--- a/ThueXeMay/Areas/Admin/Views/menus/Index.cshtml
+++ b/ThueXeMay/Areas/Admin/Views/menus/Index.cshtml
@@ -21,37 +21,70 @@
             @Html.DisplayNameFor(model => model.link)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.order)
+            @Html.DisplayNameFor(model => model.IsActive)
         </th>
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.title)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.link)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.order)
-        </td>
-        <td>
-            <a href="@Url.Action( "Edit", new { id = item.id })" class="btn btn-warning btn-icon-split">
-                <span class="icon text-white-50">
-                    <i class="fas fa-exclamation-triangle"></i>
-                </span>
-                <span class="text">Sửa</span>
-            </a>
-            <a href="@Url.Action("DeleteConfirmed","menus", new { id = item.id })" onclick="return confirm('Bạn có chắc chắn muốn xoá?');" class="btn btn-danger btn-icon-split">
-                <span class="icon text-white-50">
-                    <i class="fas fa-trash"></i>
-                </span>
-                <span class="text">Xoá</span>
-            </a>
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.title)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.link)
+            </td>
+            <td>
+                @if (item.IsActive == true)
+                {
+                    <a href="" data-id="@item.id" class="btn-custom btn btn-outline-success rounded-pill" id="fullControl"><i class="fas fa-check"></i></a>
+                }
+                else
+                {
+                    <a href="" data-id="@item.id" class="btn-custom btn btn-outline-danger rounded-pill" id="fullControl"><i class="far fa-times-circle"></i></a>
+
+                }
+            </td>
+            <td>
+                <a href="@Url.Action( "Edit", new { id = item.id })" class="btn btn-warning btn-icon-split">
+                    <span class="icon text-white-50">
+                        <i class="fas fa-exclamation-triangle"></i>
+                    </span>
+                    <span class="text">Sửa</span>
+                </a>
+                <a href="@Url.Action("DeleteConfirmed","menus", new { id = item.id })" onclick="return confirm('Bạn có chắc chắn muốn xoá?');" class="btn btn-danger btn-icon-split">
+                    <span class="icon text-white-50">
+                        <i class="fas fa-trash"></i>
+                    </span>
+                    <span class="text">Xoá</span>
+                </a>
+            </td>
+        </tr>
+    }
 
 </table>
+@section scripts{
+    <script>
+        $(document).ready(function () {
+            $(".btn-custom").off('click').on('click', function (e) {
+                e.preventDefault();
+                var id = $(this).data('id');
+                $.ajax({
+                    url: "/Admin/menus/changeView",
+                    data: { id: id },
+                    type: "POST",
+                    success: function (data) {
+                        if (data.status) {
+                            window.location.reload();
+                        }
+                        else {
+                            window.location.reload();
+                        }
+                    }
+                });
+            })
+
+        })
+    </script>
+}
