--- a/ThueXeMay/Views/Blog/Details.cshtml
+++ b/ThueXeMay/Views/Blog/Details.cshtml
@@ -23,7 +23,7 @@
 
                 <h2 class="mb-3">@Model.head</h2>
 
-                <div>@Html.Raw(Model.content)</div>
+                <div style="text-align: justify">@Html.Raw(Model.content)</div>
 
                 <div class="about-author d-flex p-4 bg-light">
                     <div class="bio mr-5">
