--- a/ThueXeMay/Areas/Admin/Views/Shared/Layout_Admin.cshtml
+++ b/ThueXeMay/Areas/Admin/Views/Shared/Layout_Admin.cshtml
@@ -19,7 +19,9 @@
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
           rel="stylesheet">
     <!-- Custom styles for this template-->
+    <link href="~/Content/Admin/css/styles.css" rel="stylesheet" />
     <link href="~/Content/Admin/css/sb-admin-2.min.css" rel="stylesheet">
+
     @RenderSection("css", false)
 </head>
 
@@ -100,51 +102,27 @@
             </div>
 
             <li class="nav-item">
-                <a class="nav-link" href="charts.html">
+                <a class="nav-link" href="@Url.Action("Index","rents")">
                     <i class="fas fa-fw fa-chart-area"></i>
-                    <span>Đơn hàng</span>
+                    <span>Đơn thuê</span>
                 </a>
             </li>
 
-            <!-- Nav Item - Pages Collapse Menu -->
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages"
-                   aria-expanded="true" aria-controls="collapsePages">
-                    <i class="fas fa-fw fa-folder"></i>
-                    <span>Pages</span>
-                </a>
-                <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
-                    <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Login Screens:</h6>
-                        <a class="collapse-item" href="login.html">Login</a>
-                        <a class="collapse-item" href="register.html">Register</a>
-                        <a class="collapse-item" href="forgot-password.html">Forgot Password</a>
-                        <div class="collapse-divider"></div>
-                        <h6 class="collapse-header">Other Pages:</h6>
-                        <a class="collapse-item" href="404.html">404 Page</a>
-                        <a class="collapse-item" href="blank.html">Blank Page</a>
-                    </div>
-                </div>
-            </li>
-
-            <!-- Nav Item - Charts -->
-            <!-- Nav Item - Tables -->
             <li class="nav-item">
                 <a class="nav-link" href="@Url.Action("ContactAdmin","Home")">
                     <i class="fas fa-fw fa-table"></i>
                     <span>Liên lạc</span>
                 </a>
             </li>
-            @if (admin.fulControl == true)
-            {
-                <li class="nav-item">
-                    <a class="nav-link" href="@Url.Action("Index","Employees")">
-                        <i class="fas fa-fw fa-table"></i>
-                        <span>Nhân viên</span>
-                    </a>
-                </li>
-            }
-
+                @if (admin.fulControl == true)
+                {
+                    <li class="nav-item">
+                        <a class="nav-link" href="@Url.Action("Index", "Employees")">
+                            <i class="fas fa-users"></i>
+                            <span>Nhân viên</span>
+                        </a>
+                    </li>
+                  }
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
 
@@ -258,32 +236,7 @@
                         <div class="topbar-divider d-none d-sm-block"></div>
 
                         <!-- Nav Item - User Information -->
-                        <li class="nav-item dropdown no-arrow">
-                            <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
-                               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <span class="mr-2 d-none d-lg-inline text-gray-600 small">@admin.name</span>
-                                <img class="img-profile rounded-circle"
-                                     src="~/Content/Admin/img/undraw_profile.svg">
-                            </a>
-                            <!-- Dropdown - User Information -->
-                            <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
-                                 aria-labelledby="userDropdown">
-                                <a class="dropdown-item" href="#">
-                                    <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    Đổi tên
-                                </a>
-                                <a class="dropdown-item" href="#">
-                                    <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    Đổi mật khẩu
-                                </a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="~/Admin/Logout" data-toggle="modal" data-target="#logoutModal">
-                                    <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    Đăng xuất
-                                </a>
-                            </div>
-                        </li>
-
+                        @Html.Action("AdminName","employees")
                     </ul>
 
                 </nav>
