--- a/ThueXeMay/Views/Home/Index.cshtml
+++ b/ThueXeMay/Views/Home/Index.cshtml
@@ -93,8 +93,8 @@
                     <span class="subheading">Về chúng tôi</span>
                     <h2 class="mb-4">Chào mừng bạn đến với dịch vụ Thuê Xe Máy - Vinh</h2>
 
-                    <p>Với nhiều danh lam thắng cảnh, di tích lịch sử, các điểm vui chơi, giải trí, thành phố Vinh, tỉnh Nghệ An là điểm đến không thể bỏ qua trong kỳ nghỉ lễ.</p>
-                    <p>Hiện nay, do nhu cầu du lịch phiêu lưu, khám phá tăng cao, các địa điểm du lịch đường đèo, đường núi, địa hình khó di chuyển lại là điểm đến được nhiều bạn trẻ có đam mê chinh phục lựa chọn. Bởi tính chất đặc thù của hình thức du lịch này mà xe máy trở thành phương tiện phù hợp, được ưu tiên sử dụng. Từ đó dịch vụ cho thuê xe máy tại Vinh ra đời và ngày một phổ biến.</p>
+                    <p style="text-align:justify">Với nhiều danh lam thắng cảnh, di tích lịch sử, các điểm vui chơi, giải trí, thành phố Vinh, tỉnh Nghệ An là điểm đến không thể bỏ qua trong kỳ nghỉ lễ.</p>
+                    <p style="text-align:justify">Hiện nay, do nhu cầu du lịch phiêu lưu, khám phá tăng cao, các địa điểm du lịch đường đèo, đường núi, địa hình khó di chuyển lại là điểm đến được nhiều bạn trẻ có đam mê chinh phục lựa chọn. Bởi tính chất đặc thù của hình thức du lịch này mà xe máy trở thành phương tiện phù hợp, được ưu tiên sử dụng. Từ đó dịch vụ cho thuê xe máy tại Vinh ra đời và ngày một phổ biến.</p>
                     <p><a href="~/Cars" class="btn btn-primary py-3 px-4">Tìm phương tiện </a></p>
                 </div>
             </div>
