--- a/ThueXeMay/Areas/Admin/Views/employees/Create.cshtml
+++ b/ThueXeMay/Areas/Admin/Views/employees/Create.cshtml
@@ -5,14 +5,13 @@
     Layout = "~/Areas/Admin/Views/Shared/Layout_Admin.cshtml";
 }
 
-<h2>Create</h2>
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>employee</h4>
+        <h4>Thêm tài khoản quản trị</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -26,7 +25,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.pass, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.pass, new { htmlAttributes = new { @class = "form-control" } })
+                <input class="form-control text-box single-line" id="pass" name="pass" type="password" required>                @Html.ValidationMessageFor(model => model.pass, "", new { @class = "text-danger" })
                 @Html.ValidationMessageFor(model => model.pass, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -40,18 +39,18 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.fulControl, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <div class="checkbox">
-                    @Html.EditorFor(model => model.fulControl)
-                    @Html.ValidationMessageFor(model => model.fulControl, "", new { @class = "text-danger" })
-                </div>
-            </div>
+            <input class="custom-checkbox" style="width:30px;height:20px;margin-left:10px" type="checkbox" name="fulControl" value="true">
+            @Html.LabelFor(model => model.fulControl, htmlAttributes: new { @class = "control-label col-md-2",@style="color:red" })
         </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <button type="submit" class="btn btn-primary btn-icon-split">
+                    <span class="icon text-white-50">
+                        <i class="fas fa-plus"></i>
+                    </span>
+                    <span class="text">Thêm mới</span>
+                </button>
             </div>
         </div>
     </div>
