--- a/ThueXeMay/Views/Shared/_Layout.cshtml
+++ b/ThueXeMay/Views/Shared/_Layout.cshtml
@@ -57,9 +57,9 @@
                         <h2 class="ftco-heading-2"><a href="#" class="logo">Thuê<span>Xe Máy</span></a></h2>
                         <p>Đồng hành cùng bạn trên mọi cung đường và ở mọi thắng cảnh của miền đất Nghệ An.</p>
                         <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
-                            <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
+                            
                             <li class="ftco-animate"><a href="https://www.facebook.com/profile.php?id=100088474176523"><span class="icon-facebook"></span></a></li>
-                            <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
+                            
                         </ul>
                     </div>
                 </div>
@@ -69,7 +69,7 @@
                         <ul class="list-unstyled">
                             <li><a href="~/About" class="py-2 d-block">Giới thiệu</a></li>
                             <li><a href="~/Blog" class="py-2 d-block">Bài viết</a></li>
-                            <li><a href="#" class="py-2 d-block">Điều khoản và dịch vụ</a></li>
+                            <li><a href="@Url.Action("DkDv","Home")" class="py-2 d-block">Điều khoản và dịch vụ</a></li>
                         </ul>
                     </div>
                 </div>
@@ -78,8 +78,7 @@
                         <h2 class="ftco-heading-2">Hỗ trợ khách hàng</h2>
                         <ul class="list-unstyled">
                             <li><a href="http://ductaii.tk/nhom14" class="py-2 d-block">Thành viên nhóm</a></li>
-                            <li><a href="#" class="py-2 d-block">Mẹo thuê xe</a></li>
-                            <li><a href="#" class="py-2 d-block">Cách thức hoạt động</a></li>
+                            <li><a href="@Url.Action("faqs","Home")" class="py-2 d-block">FAQs</a></li>
                             <li><a href="~/Contact" class="py-2 d-block">Liên hệ với chúng tôi</a></li>
                         </ul>
                     </div>
